refactor of dependency-export plugin to allow for cli argument configuration

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,2 +1,6 @@
+version.kotlin=1.3.72
+version.gradlePublish=0.10.1
+version.lombok=1.18.16
+version.slf4j=1.7.30
 version.junitJupiter=5.7.0
 version.junitPlatform=1.7.0
