--- a/dependency-export/sample/groovy/build.gradle
+++ b/dependency-export/sample/groovy/build.gradle
@@ -4,13 +4,12 @@ buildscript {
     }
 
     dependencies {
-        classpath "net.woggioni.plugins:dependency-export:0.1"
+        classpath "net.woggioni.gradle:dependency-export:0.1"
     }
 }
 
 plugins {
-    id "org.jetbrains.kotlin.jvm" version "1.3.61"
-    id "net.woggioni.plugins.dependency-export" version "0.1"
+    id "net.woggioni.gradle.dependency-export" version "0.1"
 }
 
 repositories {
@@ -18,9 +17,8 @@ repositories {
     mavenLocal()
 }
 
-
 exportDependencies {
-    configurationName = 'runtime'
+    configurationName = 'runtimeCl'
 }
 
 renderDependencies {
