fixed dependency-export plugin for Gradle 7.0

--- a/build.gradle
+++ b/build.gradle
@@ -23,6 +23,11 @@ subprojects {
         useJUnitPlatform()
     }
 
+    java {
+        sourceCompatibility = JavaVersion.VERSION_11
+        targetCompatibility = JavaVersion.VERSION_11
+    }
+
     publishing {
         repositories {
             maven {
