added initial buggy version of executable jar plugin

--- a/settings.gradle
+++ b/settings.gradle
@@ -17,3 +17,6 @@ include("multi-release-jar")
 include("wildfly")
 include("lombok")
 include("jlink")
+include("executable-jar")
+include("executable-jar:executable-jar-common")
+include("executable-jar:executable-jar-launcher")
