--- a/gradle.properties
+++ b/gradle.properties
@@ -1,9 +1,6 @@
 woggioniMavenRepositoryUrl=https://mvn.woggioni.net/
 
-
-version.kotlin=1.3.72
-version.gradlePublish=0.10.1
+version.gradle=7.2
 version.lombok=1.18.16
-version.slf4j=1.7.30
 version.junitJupiter=5.7.2
 version.junitPlatform=1.7.0
