--- a/jlink/build.gradle
+++ b/jlink/build.gradle
@@ -5,6 +5,11 @@ plugins {
 
 version = "0.1"
 
+java {
+    sourceCompatibility = JavaVersion.VERSION_1_8
+    targetCompatibility = JavaVersion.VERSION_1_8
+}
+
 gradlePlugin {
     plugins {
         create("JlinkPlugin") {
