--- a/lombok/build.gradle
+++ b/lombok/build.gradle
@@ -4,6 +4,11 @@ plugins {
 
 version = "0.1"
 
+java {
+    sourceCompatibility = JavaVersion.VERSION_1_8
+    targetCompatibility = JavaVersion.VERSION_1_8
+}
+
 gradlePlugin {
     plugins {
         create("LombokPlugin") {
