--- a/executable-jar/executable-jar-common/build.gradle
+++ b/executable-jar/executable-jar-common/build.gradle
@@ -1,3 +1,14 @@
 plugins {
     id 'java-library'
 }
+
+java {
+    sourceCompatibility = JavaVersion.VERSION_1_8
+    targetCompatibility = JavaVersion.VERSION_1_8
+}
+
+jar {
+    manifest {
+        attributes "Automatic-Module-Name" : "net.woggioni.executable.jar"
+    }
+}
