--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,17 @@
 woggioniMavenRepositoryUrl=https://mvn.woggioni.net/
 
+version.myGraglePlugins=2021.10
 version.gradle=7.2
 version.lombok=1.18.16
 version.junitJupiter=5.7.2
 version.junitPlatform=1.7.0
+version.bnd=5.3.0
+version.felix.config.admin=1.9.20
+version.felix=7.0.1
+version.felix.scr=2.1.30
+version.felix.security=2.8.2
+version.osgi=7.0.0
+version.osgi.cm=1.6.0
+version.osgi.service.component=1.4.0
+version.osgi.function=1.1.0
+version.osgi.promise=1.1.1
