enforced Java 8 compatibility

--- a/dependency-export/build.gradle
+++ b/dependency-export/build.gradle
@@ -5,9 +5,9 @@ plugins {
 dependencies {
 }
 
-java {
-    sourceCompatibility = JavaVersion.VERSION_1_8
-    targetCompatibility = JavaVersion.VERSION_1_8
+compileJava {
+    options.release = 8
+    options.compilerArgs << '-parameters'
 }
 
 ["apiElements", "runtimeElements"].each { String name ->
