--- a/lombok/build.gradle
+++ b/lombok/build.gradle
@@ -4,9 +4,9 @@ plugins {
 
 version = "0.1"
 
-java {
-    sourceCompatibility = JavaVersion.VERSION_1_8
-    targetCompatibility = JavaVersion.VERSION_1_8
+compileJava {
+    options.release = 8
+    options.compilerArgs << '-parameters'
 }
 
 gradlePlugin {
