--- a/multi-release-jar/build.gradle
+++ b/multi-release-jar/build.gradle
@@ -18,7 +18,7 @@ gradlePlugin {
     }
 }
 
-java {
-    sourceCompatibility = JavaVersion.VERSION_1_8
-    targetCompatibility = JavaVersion.VERSION_1_8
+compileJava {
+    options.release = 8
+    options.compilerArgs << '-parameters'
 }
