--- a/osgi-app/build.gradle
+++ b/osgi-app/build.gradle
@@ -8,10 +8,11 @@ childProjects.forEach {name, child ->
     child.with {
         apply plugin: 'maven-publish'
 
-        java {
-            sourceCompatibility = JavaVersion.VERSION_1_8
-            targetCompatibility = JavaVersion.VERSION_1_8
+        compileJava {
+            options.release = 8
+            options.compilerArgs << '-parameters'
         }
+
         publishing {
             repositories {
                 maven {
@@ -48,6 +49,11 @@ dependencies {
     ['annotationProcessor', 'testCompileOnly', 'testAnnotationProcessor'].each { conf ->
         add(conf, [group: "org.projectlombok", name: "lombok", version: getProperty('version.lombok')])
     }
+}
+
+java {
+    sourceCompatibility = JavaVersion.VERSION_1_8
+    targetCompatibility = JavaVersion.VERSION_1_8
 }
 
 jar {
