--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,7 @@
 woggioniMavenRepositoryUrl=https://mvn.woggioni.net/
 
-version.myGraglePlugins=2021.10
-version.gradle=7.3.3
+version.myGradlePlugins=2022.06
+version.gradle=7.4.3
 version.lombok=1.18.16
 version.junitJupiter=5.7.2
 version.junitPlatform=1.7.0
