--- a/osgi-app/osgi-simple-bootstrapper-application/build.gradle
+++ b/osgi-app/osgi-simple-bootstrapper-application/build.gradle
@@ -1,23 +1,20 @@
 plugins {
     id 'java-library'
-    id 'biz.aQute.bnd.builder'
+    alias(catalog.plugins.bnd)
 }
 
 group = "net.woggioni.osgi"
 
 dependencies {
-    compileOnly group: 'org.osgi', name: 'osgi.annotation', version: getProperty('version.osgi')
-    compileOnly group: 'org.osgi', name: 'osgi.core', version: getProperty('version.osgi')
-    compileOnly group: 'org.osgi', name: 'osgi.cmpn', version: getProperty('version.osgi')
-    compileOnly group: 'org.osgi',
-            name: 'org.osgi.service.component.annotations',
-            version: getProperty('version.osgi.service.component')
-
+    compileOnly catalog.osgi.core
+    compileOnly catalog.osgi.cmpn
+    compileOnly catalog.osgi.annotation
+    compileOnly catalog.osgi.service.component.annotations
     compileOnly project(":osgi-app:osgi-simple-bootstrapper-api")
 
-    runtimeOnly group: 'org.apache.felix', name: 'org.apache.felix.scr', version: getProperty('version.felix.scr')
-    runtimeOnly group: 'org.osgi', name: 'org.osgi.util.function', version: getProperty('version.osgi.function')
-    runtimeOnly group: 'org.osgi', name: 'org.osgi.util.promise', version: getProperty('version.osgi.promise')
+    runtimeOnly catalog.felix.scr
+    runtimeOnly catalog.osgi.util.function
+    runtimeOnly catalog.osgi.util.promise
 }
 
 jar {
