--- a/build.gradle
+++ b/build.gradle
@@ -29,16 +29,19 @@ subprojects { subproject ->
     repositories {
         maven {
             url = woggioniMavenRepositoryUrl
+            content {
+                includeGroup 'net.woggioni'
+            }
         }
         mavenCentral()
     }
 
     dependencies {
         ['compileOnly', 'annotationProcessor', 'testCompileOnly', 'testAnnotationProcessor'].each { conf ->
-            add(conf, [group: "org.projectlombok", name: "lombok", version: project['version.lombok']])
+            add(conf, [group: "org.projectlombok", name: "lombok", version: catalog.versions.lombok.get()])
         }
-        add("testImplementation", create(group: "org.junit.jupiter", name:"junit-jupiter-api", version: project["version.junitJupiter"]))
-        add("testRuntimeOnly", create(group: "org.junit.jupiter", name: "junit-jupiter-engine", version: project["version.junitJupiter"]))
+        add("testImplementation", catalog.junit.jupiter.api)
+        add("testRuntimeOnly", catalog.junit.jupiter.engine)
         add("testImplementation", gradleTestKit())
     }
 
