--- a/gradle.properties
+++ b/gradle.properties
@@ -1,17 +1,15 @@
 woggioniMavenRepositoryUrl=https://mvn.woggioni.net/
 
-version.myGradlePlugins=2022.08
-version.gradle=7.4.3
-version.lombok=1.18.22
-version.junitJupiter=5.7.2
-version.junitPlatform=1.7.0
-version.bnd=5.3.0
-version.felix.config.admin=1.9.20
-version.felix=7.0.1
-version.felix.scr=2.1.30
+lys.catalog.version=0.2-SNAPSHOT
+
+version.myGradlePlugins=2023.01
+version.gradle=7.6
+version.felix.config.admin=1.9.26
+version.felix=7.0.5
+version.felix.scr=2.2.4
 version.felix.security=2.8.2
-version.osgi=7.0.0
+version.osgi=8.0.0
 version.osgi.cm=1.6.0
-version.osgi.service.component=1.4.0
-version.osgi.function=1.1.0
-version.osgi.promise=1.1.1
+version.osgi.service.component=1.5.1
+version.osgi.function=1.2.0
+version.osgi.promise=1.3.0
