--- a/gradle.properties
+++ b/gradle.properties
@@ -1,8 +1,8 @@
 woggioniMavenRepositoryUrl=https://mvn.woggioni.net/
 
-lys.catalog.version=0.2-SNAPSHOT
+lys.catalog.version=2023.06.11
 
-version.myGradlePlugins=2023.01
+version.myGradlePlugins=2023.06.13
 version.gradle=7.6
 version.felix.config.admin=1.9.26
 version.felix=7.0.5
