added sambal plugin and native image plugin

--- a/settings.gradle
+++ b/settings.gradle
@@ -25,3 +25,5 @@ include 'osgi-app:osgi-simple-bootstrapper'
 include 'osgi-app:osgi-simple-bootstrapper-api'
 include 'osgi-app:osgi-simple-bootstrapper-application'
 include 'wildfly'
+include 'sambal'
+include 'native-image'
