added jlink plugin

--- a/settings.gradle
+++ b/settings.gradle
@@ -26,4 +26,4 @@ include 'osgi-app:osgi-simple-bootstrapper-api'
 include 'osgi-app:osgi-simple-bootstrapper-application'
 include 'wildfly'
 include 'sambal'
-include 'native-image'
+include 'graalvm'
