added deployment name to Wildfly plugin

--- a/osgi-app/osgi-simple-bootstrapper-application/build.gradle
+++ b/osgi-app/osgi-simple-bootstrapper-application/build.gradle
@@ -18,7 +18,9 @@ dependencies {
 }
 
 jar {
-    bnd '''\
-        Import-Package: !lombok, *
-    '''
+    bundle {
+        bnd '''\
+            Import-Package: !lombok, *
+        '''
+    }
 }
