fully migrated to gitea

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,5 @@
-lys.catalog.version=2024.03.12
-
-version.myGradlePlugins=2024.04.04
+lys.catalog.version=2024.04.04
+version.myGradlePlugins=2024.04.05
 version.gradle=7.6
+
+gitea.maven.url = https://gitea.woggioni.net/api/packages/woggioni/maven
