--- a/settings.gradle
+++ b/settings.gradle
@@ -28,3 +28,5 @@ include 'wildfly'
 include 'sambal'
 include 'graalvm'
 include 'jdeps'
+include 'finalguard'
+include 'finalguard:finalguard-javac-plugin'
