--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,7 @@ subprojects { subproject ->
 
     java {
         toolchain {
-            languageVersion = JavaLanguageVersion.of(21)
+            languageVersion = JavaLanguageVersion.of(25)
         }
     }
 
@@ -49,7 +49,7 @@ subprojects { subproject ->
         add("testImplementation", catalog.junit.jupiter.api)
         add("testImplementation", catalog.junit.jupiter.params)
         add("testRuntimeOnly", catalog.junit.jupiter.engine)
-//        add("testRuntimeOnly", catalog.junit.platform.launcher)
+        add("testRuntimeOnly", catalog.junit.platform.launcher)
         add("testImplementation", gradleTestKit())
     }
 
