--- a/finalguard/finalguard-javac-plugin/build.gradle
+++ b/finalguard/finalguard-javac-plugin/build.gradle
@@ -6,7 +6,7 @@ group = "net.woggioni.finalguard"
 
 java {
     toolchain {
-        languageVersion = JavaLanguageVersion.of(21)
+        languageVersion = JavaLanguageVersion.of(25)
     }
 }
 
@@ -18,6 +18,19 @@ java {
 
 tasks.named(org.gradle.api.plugins.JavaPlugin.COMPILE_JAVA_TASK_NAME, JavaCompile.class) {
     options.compilerArgs << '-parameters'
+}
+
+configurations {
+    testCompileClasspath {
+        attributes {
+            attribute(org.gradle.api.attributes.java.TargetJvmVersion.TARGET_JVM_VERSION_ATTRIBUTE, 25)
+        }
+    }
+    testRuntimeClasspath {
+        attributes {
+            attribute(org.gradle.api.attributes.java.TargetJvmVersion.TARGET_JVM_VERSION_ATTRIBUTE, 25)
+        }
+    }
 }
 
 test {
