--- a/jpms-check/build.gradle
+++ b/jpms-check/build.gradle
@@ -2,6 +2,12 @@ plugins {
     id 'groovy-gradle-plugin'
 }
 
+java {
+    sourceCompatibility(JavaVersion.VERSION_1_8.toString())
+    targetCompatibility(JavaVersion.VERSION_1_8.toString())
+    modularity.inferModulePath = false
+}
+
 gradlePlugin {
     plugins {
         create("JPMSCheckPlugin") {
